--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /SuperDraw/Debug
+/.vs/SuperDraw/v16
+/SuperDraw/SuperDraw/Debug
+/SuperDraw/SuperDraw/x64/Debug
+/SuperDraw/WindowEx/Debug
