--- a/SuperDraw/WindowEx/WindowEx.vcxproj.filters
+++ b/SuperDraw/WindowEx/WindowEx.vcxproj.filters
@@ -1,119 +1,134 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
     <Filter Include="资源文件">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="source">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="SuperDraw">
+      <UniqueIdentifier>{f11ffae0-f447-4362-b2d0-a634156d8115}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sorce\WindowEx.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Director.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Scene.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Node.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Schedule.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Sprite.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Tools.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Ref.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Action.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\EventDispatcher.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\UI.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\ImagePool.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Label.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Layer.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\KeyboardHelper.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\Random.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="sorce\TMath.cpp">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="sorce\SuperDraw.cpp">
+      <Filter>SuperDraw</Filter>
+    </ClCompile>
+    <ClCompile Include="sorce\DrawNode.cpp">
+      <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sorce\WindowEx.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Director.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Scene.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Node.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Schedule.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Sprite.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Tools.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Ref.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Action.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\EventDispatcher.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\UI.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\ImagePool.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Label.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Layer.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\KeyboardHelper.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\Random.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="sorce\TMath.h">
-      <Filter>源文件</Filter>
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="sorce\SuperDraw.h">
+      <Filter>SuperDraw</Filter>
+    </ClInclude>
+    <ClInclude Include="sorce\DrawNode.h">
+      <Filter>source</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
